--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,11 +1,18 @@
 <div class="login-box">
-    <h2>Login</h2>
-    <form action="{{ url_for('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.</p>
+    <div id="login-content" style="visibility: hidden;">
+        <h2>Login</h2>
+        <form action="{{ url_for('login') }}" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.</p>
+
+    </div>
+    <script>
+        const loginBox = document.querySelector("#login-content");
+    </script>
+    <button onclick='if (loginBox.style.visibility === "hidden") {loginBox.style.visibility = "visible";} else {loginBox.style.visibility = "hidden";}'>Toggle login box</button>
 </div>
