--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,5 +1,5 @@
 <div class="login-box">
-    <div id="login-content" style="visibility: hidden;">
+    <div id="login-content" style="visibility: hidden; border-style: solid; border-radius: 10px;">
         <h2>Login</h2>
         <form action="{{ url_for('login') }}" method="post">
             <label for="username">Username:</label>
