--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -27,7 +27,7 @@
     }
 </style>
 <div class="login-box">
-    <div id="login-content">
+    <div id="login-content" style="visibility: hidden;">
         <h2>Login</h2>
         <form action="{{ url_for('login') }}" method="post">
             <label for="username">Username:</label>
