--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -58,7 +58,7 @@
             fetch("{{ url_for('login') }}", {
                 method: "POST",
                 body: JSON.stringify({ username: usernameBox.value, password: passwordBox.value })
-            }).then((response) => {reponse.json()}).then((json) => {loginSuccess(json.success)});
+            }).then((response) => {response.json()}).then((json) => {loginSuccess(json.success)});
         }, true);
     </script>
     <button onclick='if (loginBox.style.display === "none") {loginBox.style.display = "unset";} else {loginBox.style.display = "none";}'>Toggle login box</button>
