--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -51,7 +51,7 @@
             else {
                 messageBox.textContent = "Login credentials were wrong."
             }
-            messageBox.style.visibility = messageBox.style.visibility === "hidden" ? "visible" : "hidden";
+            messageBox.style.visibility = "visible";
         }
         form.addEventListener("submit", (event) => {
             event.preventDefault();
