--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -22,7 +22,7 @@
     }
 </style>
 <div class="signup-box">
-    <div id="signup-content" style="display: none;">
+    <div id="signup-content">
         <h2>Sign up</h2>
         <form>
             <label for="username">Username:</label>
