--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -1,9 +1,7 @@
 <style>
     .signup-box {
         display: grid;
-    }
-    .signup-box button {
-        justify-self: right;
+        justify-content: center;
     }
     #signup-content {
         padding: 8px;
