--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -13,7 +13,7 @@
             <label for="username">Temporary username:</label>
             <input type="text" id="username" name="username" required>
             <label for="pgroup">Permission group:</label>
-            <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" onbeforeinput="return event.value < {{ session.permission_group }};" required>
+            <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" max="{{ session.permission_group - 1 }}" required>
             <button type="submit">Login</button>
             <p style="visibility: hidden;" id="message"></p>
         </form>
