--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -8,13 +8,28 @@
         {% else %}
         Logged in as {{ session.username }}.
         <button id="logout-button">Logout</button>
-        {% if Settings.CREATE_MEMBERS in session.settings %}
+        {% if Settings._CREATE_MEMBERS in session.settings %}
+        <style>
+        .settings-box {
+            border-radius: 4px;
+            border-color: black;
+            border-width: 2px;
+            border-style: solid;
+        }
+        </style>
         <form>
             <label for="username">Temporary username:</label>
             <input type="text" id="username" name="username" required>
             <label for="pgroup">Permission group:</label>
             <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" max="{{ session.permission_group - 1 }}" required>
-            <button type="submit">Login</button>
+            Settings:
+            <div class="settings-box">
+            {% for setting in session.settings %}
+                <label for="setting_{{ setting.name }}">{{ setting.name }}</label>
+                <input name="setting_{{ setting.name }}" id="setting_{{ setting.name }}" type="checkbox">
+            {% endfor %}
+            </div>
+            <button type="submit">Send</button>
             <p style="visibility: hidden;" id="message"></p>
         </form>
         {% endif %}
