--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -24,9 +24,9 @@
             <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" max="{{ session.permission_group - 1 }}" required>
             Settings:
             <div class="settings-box">
-            {% for setting in Settings %}
+            {% for setting in Settings.__members__ %}
                 {% if setting in session.settings and not setting.name.startswith("_") %}
-                <label for="setting_{{ setting.name }}_">{{ setting.name }}</label>
+                <label for="setting_{{ setting.name }}_">{{ setting.name.replace("_", " ").title() }}</label>
                 <input name="setting_{{ setting.name }}_" id="setting_{{ setting.name }}_" type="checkbox">
                 {% endif %}
             {% endfor %}
