--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -13,6 +13,10 @@
         {% if Settings._CREATE_MEMBERS in session.settings %}
         <style>
         form {
+            border-radius: 4px;
+            border-color: black;
+            border-width: 2px;
+            border-style: solid;
             display: grid;
         }
         form .settings-box {
@@ -33,7 +37,7 @@
             Settings:
             <div class="settings-box">
             {% for setting in Settings.__members__.values() %}
-                {% if setting in session.settings and not setting.name.startswith("_") %}
+                {% if setting in session.settings and not setting.name.startswith("_") and setting.name != "NONE" %}
                 <label for="setting_{{ setting.name }}_">{{ setting.name.replace("_", " ").title() }}</label>
                 <input name="setting_{{ setting.name }}_" id="setting_{{ setting.name }}_" type="checkbox">
                 {% endif %}
