--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -35,6 +35,10 @@
             border:1px solid #ccc;
             padding:5px;
             display: block;
+            -webkit-user-select: none;     
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
 
         .settings-box label:hover {
