--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -46,7 +46,7 @@
             cursor:pointer;
         }
         </style>
-        <form>
+        <form id="addUserForm">
             <label for="username">Temporary username:</label>
             <input type="text" id="username" name="username" required>
             <br>
