--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -7,6 +7,7 @@
         {% if not session %}
         {% include 'login.html' %}  
         {% else %}
+        {% include 'boxedSectionHead.html' %}
         Logged in as {{ session.username }}.
         <button id="logout-button">Logout</button>
         {% if Settings._CREATE_MEMBERS in session.settings %}
@@ -72,6 +73,9 @@
         <script>
             {% include 'homeCode.js' %}
         </script>
+        {% include 'openBoxedSection.html' %}
+            Hi!
+        {% include 'closeBoxedSection.html' %}
         {% endif %}
     </body>
 </html>
