--- a/api/templates/closeBoxedSection.html
+++ b/api/templates/closeBoxedSection.html
@@ -1,6 +1,7 @@
 </div>
-<button onclick="console.log(event);">
+<button onclick="handleBoxedSectionOpenerButton(event);" class="boxed-section-button">
     <span class="material-symbols-outlined">
         keyboard_arrow_down
     </span>
 </button>
+</div>
