--- a/api/templates/openBoxedSection.html
+++ b/api/templates/openBoxedSection.html
@@ -1,5 +1,6 @@
-<div class="boxed-section">
-    <button onclick="console.log(event);">
+<div class="outer-section">
+<div class="boxed-section" style="visibility: hidden;">
+    <button onclick="handleBoxedSectionCloserButton(event);" class="boxed-section-button">
         <span class="material-symbols-outlined">
             keyboard_arrow_up
         </span>
