--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -24,13 +24,13 @@
 </style>
 <script>
 function handleBoxedSectionOpenerButton(event) {
-    event.target.parentNode.style.visibility = "hidden";
-    event.target.parentNode.parentNode.firstElementChild.style.visibility = "visible";
+    event.target.parentNode.style.display = "none";
+    event.target.parentNode.parentNode.firstElementChild.style.display = "unset";
     console.log(event);
 }
 function handleBoxedSectionCloserButton(event) {
     console.log(event);
-    event.target.parentNode.parentNode.style.visibility = "hidden";
-    event.target.parentNode.parentNode.parentNode.lastElementChild.style.visibility = "visible";
+    event.target.parentNode.parentNode.style.display = "none";
+    event.target.parentNode.parentNode.parentNode.lastElementChild.style.display = "unset";
 }
 </script>
