--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -8,6 +8,9 @@
     width: min-content;
     white-space: nowrap;
 }
+.boxed-section * {
+    margin: 4px;
+}
 .boxed-section-button {
   border: none;
   background: inherit;
