--- a/api/templates/openBoxedSection.html
+++ b/api/templates/openBoxedSection.html
@@ -1,5 +1,5 @@
 <div class="outer-section">
-<div class="boxed-section" style="visibility: hidden;">
+<div class="boxed-section" style="display: none;">
     <button onclick="handleBoxedSectionCloserButton(event);" class="boxed-section-button">
         <span class="material-symbols-outlined">
             keyboard_arrow_up
