--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -8,7 +8,7 @@
     width: min-content;
     white-space: nowrap;
 }
-.boxed-section * {
+.boxed-section .boxed-content * {
     margin: 4px;
 }
 .boxed-section-button {
