--- a/api/templates/closeBoxedSection.html
+++ b/api/templates/closeBoxedSection.html
@@ -1,4 +1,4 @@
-</div>
+</div></div>
 <button onclick="handleBoxedSectionOpenerButton(event);" class="boxed-section-button">
     <span class="material-symbols-outlined">
         keyboard_arrow_down
