changed boxed section

--- a/api/templates/openBoxedSection.html
+++ b/api/templates/openBoxedSection.html
@@ -1,8 +1,8 @@
-<div class="outer-section">
-<div class="boxed-section" style="display: none;">
-    <button onclick="handleBoxedSectionCloserButton(event);" class="boxed-section-button">
-        <span class="material-symbols-outlined">
-            keyboard_arrow_up
-        </span>
-    </button>
-   <div class="boxed-content"> 
+<div class="boxed-section">
+<div class="boxed-section-closeable" style="display: none;">
+<button onclick="handleBoxedSectionCloserButton(event);" class="boxed-section-button">
+    <span class="material-symbols-outlined">
+        keyboard_arrow_up
+    </span>
+</button>
+<div class="boxed-content"> 
