--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -16,6 +16,11 @@
   background: inherit;
   width: min-content;
   height: min-content;
+  aspect-ratio: 1/1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 .material-symbols-outlined {
   font-variation-settings:
