--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -13,7 +13,10 @@
         {% if Settings._CREATE_MEMBERS in session.settings %}
         <style>
         .settings-box label {
-            border:1px solid #ccc;
+            border-width:1px
+            border-style: solid
+            border-color: lightgray;
+            border-radius: 4px;
             padding:5px;
             display: block;
             -webkit-user-select: none;     
