--- a/api/templates/closeBoxedSection.html
+++ b/api/templates/closeBoxedSection.html
@@ -1,8 +1,8 @@
 </div>
 </div>
-<button onclick="handleBoxedSectionOpenerButton(event);" class="boxed-section-button">
+<div onclick="handleBoxedSectionOpenerButton(event);" class="boxed-section-button">
     <span class="material-symbols-outlined">
         keyboard_arrow_down
     </span>
-</button>
+</div>
 </div>
