--- a/api/templates/openBoxedSection.html
+++ b/api/templates/openBoxedSection.html
@@ -1,8 +1,8 @@
 <div class="boxed-section">
 <div class="boxed-section-closeable" style="display: none;">
-<button onclick="handleBoxedSectionCloserButton(event);" class="boxed-section-button">
+<div onclick="handleBoxedSectionCloserButton(event);" class="boxed-section-button">
     <span class="material-symbols-outlined">
         keyboard_arrow_up
     </span>
-</button>
+</div>
 <div class="boxed-content"> 
