--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -13,8 +13,8 @@
         {% if Settings._CREATE_MEMBERS in session.settings %}
         <style>
         .settings-box label {
-            border-width:1px
-            border-style: solid
+            border-width:1px;
+            border-style: solid;
             border-color: lightgray;
             border-radius: 4px;
             padding:5px;
