--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -21,6 +21,8 @@
   align-items: center;
   justify-content: center;
   padding: 0;
+  user-select: none;
+  cursor: pointer;
 }
 .material-symbols-outlined {
   font-variation-settings:
