--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -35,12 +35,12 @@
 <script>
 function handleBoxedSectionOpenerButton(event) {
     event.target.parentNode.style.display = "none";
-    event.target.parentNode.parentNode.firstElementChild.style.display = "inherit";
+    event.target.parentNode.parentNode.firstElementChild.style.display = "";
     console.log(event);
 }
 function handleBoxedSectionCloserButton(event) {
     console.log(event);
     event.target.parentNode.parentNode.style.display = "none";
-    event.target.parentNode.parentNode.parentNode.lastElementChild.style.display = "inherit";
+    event.target.parentNode.parentNode.parentNode.lastElementChild.style.display = "";
 }
 </script>
