--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -5,8 +5,7 @@
     border-color: darkgray;
     border-radius: 8px;
     border-width: 2px;
-    width: min-content;
-    white-space: nowrap;
+    max-width: fit-content;
 }
 .boxed-section .boxed-content {
     margin: 4px;
