--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -12,6 +12,19 @@
         <button id="logout-button">Logout</button>
         {% if Settings._CREATE_MEMBERS in session.settings %}
         <style>
+        input {
+            border-color: darkgray;
+            border-style: solid;
+            border-width: 1px;
+            border-radius: 4px;
+            margin-top: 2px;
+            margin-bottom: 2px;
+        }
+        input:focus {
+            outline: none;
+            border-color: black;
+        }
+
         .settings-box label {
             border-width:1px;
             border-style: solid;
