--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -27,13 +27,13 @@
         </style>
         <div class="signup-box">
             <div id="signup-content">
-                <h2>Sign up</h2>
+                <h2>Registrieren</h2>
                 <form>
-                    <label for="username">Username:</label>
+                    <label for="username">Nutzername:</label>
                     <input type="text" id="username" name="username" required>
-                    <label for="password">Password:</label>
+                    <label for="password">Passwort:</label>
                     <input type="password" id="password" name="password" required>
-                    <button type="submit">Login</button>
+                    <button type="submit">Senden</button>
                     <p style="visibility: hidden;" id="message"></p>
                 </form>
             </div>
