--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -61,7 +61,7 @@
             {% endfor %}
             </div>
             {% include 'closeBoxedSection.html' %}
-            <button type="submit">Send</button>
+            <button type="submit">Erstellen</button>
             <p style="visibility: hidden;" id="message"></p>
         </form>
         {% include 'closeBoxedSection.html' %}
