--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -59,7 +59,7 @@
             <label for="pgroup">Berechtigungsgruppe:</label>
             <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" max="{{ session.permission_group - 1 }}" required>
             <br>
-            <label>Einstellungen:</label>
+            <label>Einstellungen/Berechtigungen:</label>
             {% include 'openBoxedSection.html' %}
             <div class="settings-box">
             {% for setting in Settings.__members__.values() %}
