--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -47,6 +47,9 @@
             color: white;
             cursor: pointer;
         }
+        .copy-link .material-symbols-outlined {
+            vertical-align: sub;
+        }
         .copy-link .copy-link-text {
             vertical-align: super;
         }
